# sh3r4rd.com

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.js
infra/recruiter-dashboard/lambda-src/email-parser/: db.go  extractor.go  go.mod  go.sum  handler_db_test.go  main.go  models.go  parser.go  parser_extractor_test.go  pyproject.toml  requirements.txt
infra/recruiter-dashboard/lambda-src/email-parser/cmd/handler/: main.go
infra/recruiter-dashboard/lambda-src/email-parser/email_parser/: __init__.py  extractor.py  handler.py
infra/recruiter-dashboard/lambda-src/email-parser/internal/db/: db.go  db_test.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/errors/: errors.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/extractor/: extractor.go  extractor_test.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/handler/: handler.go  handler_test.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/models/: email.go  extraction.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/parser/: parser.go  parser_test.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/sanitizer/: sanitizer.go  sanitizer_test.go
infra/recruiter-dashboard/lambda-src/email-parser/internal/ssm/: ssm.go  (+1 more)
infra/recruiter-dashboard/lambda-src/email-parser/testdata/: apple_mail_forward.eml  direct_email.eml  gmail_forward.eml  html_xss.eml  outlook_forward.eml  ses_event.json
(+93 files in other folders)
